--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -19,3 +19,5 @@
 
 # This file itself is owned by members who are assigned the Project Admin role in this project.
 CODEOWNERS "Project Admin"
+
+Nicolas Gevers nicolasgevers@yahoo.be
